--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>com.aventstack</groupId>
       <artifactId>extentreports</artifactId>
-      <version>5.0.9</version>
+      <version>5.1.1</version>
     </dependency>
 
   </dependencies>
@@ -145,4 +145,10 @@
       </plugin>
     </plugins>
   </build>
+  <repositories>
+    <repository>
+      <id/>
+      <url>https://repo.maven.apache.org/maven2/</url>
+    </repository>
+  </repositories>
 </project>
